# Big_Data_Final_Project

./: .gitignore  README.md  cassandra_connection.py  cassandra_schema_and_operations.cql  create_tables.py  csv_to_kafka_producer.py  kafka_to_csv_consumer.py  load_bronze_data.py  load_gold_data.py  load_silver_data.py  pyproject.toml  track_genre_prediction_model.py  track_popularity_prediction_model.py  visualize_gold_data_1.py  visualize_gold_data_2.py  visualize_gold_data_3.py
docs/: cassandra_connection.html  create_tables.html  csv_to_kafka_producer.html  index.html  kafka_to_csv_consumer.html  load_bronze_data.html  load_gold_data.html  load_silver_data.html  search.js  track_genre_prediction_model.html  track_popularity_prediction_model.html  visualize_gold_data_1.html  visualize_gold_data_2.html  visualize_gold_data_3.html
